<resources>
    <string name="app_name">Weather App</string>
    <string name="u2103">℃</string>
    <string name="hint_text_city_name">City Name</string>
    <string name="hint_text_conditions">Conditions</string>
    <string name="hint_text_temp_now">TEMP now</string>
    <string name="search_item_menu">Search</string>
    <string name="add_new_city_item">new</string>
    <string name="search_btn_text">Найти</string>
    <string name="cancel_btn_text">Отмена</string>
    <string name="city_name_hint">City Name</string>
    <string name="wind_speed_tv">wind</string>
    <string name="pressure_tv">pressure</string>
    <string name="humidity_tv">humidity</string>
    <string name="toolbar_title">Weather</string>
</resources>
